# Fastapi-Practice

./: .gitignore  alembic.ini  main.py  pyproject.toml
src/: app.py  schemas.py
src/database/: db.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: d3524f1e5a77_init.py
